Fix collapse icon rotation for multi-line modules

--- a/packages/vanilla/src/components/global-nav/side-nav/group/module/collapse/collapse.scss
+++ b/packages/vanilla/src/components/global-nav/side-nav/group/module/collapse/collapse.scss
@@ -2,15 +2,22 @@
 @import '~helpers/css/mixins/base.scss';
 @import '~helpers/css/mixins/spacing.scss';
 .hig__global-nav__side-nav__section__group__module__collapse {
-  @include vendor-prefix('transform', 'rotate(0deg)');
-  &--collapsed {
-    @include vendor-prefix('transform', 'rotate(-90deg)');
-  }
   &--hide {
     display: none;
   }
+
   &:hover {
     cursor: pointer;
+  }
+
+  .hig__icon {
+    @include vendor-prefix('transform', 'rotate(0deg)');
+  }
+}
+
+.hig__global-nav__side-nav__section__group__module__collapse--collapsed {
+  .hig__icon {
+    @include vendor-prefix('transform', 'rotate(-90deg)');
   }
 }
 
